--- a/bhms.html
+++ b/bhms.html
@@ -75,6 +75,8 @@ graph LR
     Router --> LPU
     LPU --> API
     API --> DB
+    API --> DB
+    DB --> API
   end
 
   subgraph FRONTEND ["💻 Frontend - Web Application"]
@@ -88,6 +90,39 @@ graph LR
   %% Dashed style for all edges
   linkStyle default stroke-dasharray: 6, 4, stroke:#333, stroke-width:1.5px;
 </div>
+
+
+  <!-- Workflow Explanation -->
+  <section>
+    <h3>Workflow Explanation</h3>
+    <p><strong>1. Edge Layer (On Bridge):</strong></p>
+    <ul>
+      <li>Sensors (Inclinometer, Accelerometer, Strain Gauge, Displacement) collect real-time data from the bridge.</li>
+      <li>Sensors send MQTT data over the Local Network to the Central Server through Sensors services.</li>
+    </ul>
+    <p><strong>2. Network Layer:</strong></p>
+    <ul>
+      <li>Local Network transmits sensor data from the edge to the Workstation/Central Server.</li>
+    </ul>
+    <p><strong>3. Central Server - Backend Layer:</strong></p>
+    <ul>
+      <li>In Workstation, sensors Services run on the Central Server, processing incoming sensor data.</li>
+      <li>Sensor data is stored and retrieved from the PostgreSQL database.</li>
+      <li>The Central Server handles HTTP requests, authentication, and serves data.</li>
+    </ul>
+    <p><strong>4. Frontend Layer:</strong></p>
+    <ul>
+      <li>The Web Application authenticates users and requests sensor data from the Central Server.</li>
+      <li>The Web Application displays live monitoring data.</li>
+    </ul>
+    <p><strong>Data Flow Summary:</strong></p>
+    <ul>
+      <li>Sensors → Local Network (MQTT/HTTP)</li>
+      <li>Local Network → Central Server (Workstation sensors Services)</li>
+      <li>Central Server → Database (Store and Fetch Data)</li>
+      <li>Web Application → Central Server (Login and Data Requests)</li>
+    </ul>
+  </section>
 
   <footer>
     ©2025 TrafikSol ITS Technologies Limited. Created by Bhakta Charan Rout.
